--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-  "presets": ["env", "react"]
+  compact: true,
+  presets: [
+    'env',
+    'react',
+    'stage-2'
+  ],
+  plugins: [
+    'lodash',
+    'react-hot-loader/babel',
+    'transform-react-jsx',
+    'transform-object-assign',
+    'transform-decorators-legacy',
+    'transform-object-rest-spread',
+    'transform-runtime',
+    'remove-comments'
+  ]
 }
